plugin menu items now appear under the "Scripts" menu item and in the
same order that they appear in the session menu "Scripts" menu item.

Updated Spanish translation strings (Thanks to Diego Schulz)

Added JDBC driver CLASSNAME and CLASSPATH to the Metadata tab so that
it is not necessary to open the driver definition for the current session to 
get this information.

	Bug-Fixes:

MySQL Plugin: Fixed bug which caused the MySQL all of the tabs to appear with no
content.

SQL editor function "View Object at cursor in Object tree" (ctrl+B) now works
for fully qualified object names with leading and trailing quotation marks and slashes.
  CAUTION: First use of JDK 1.5 specific code in SQuirreL's core, will compile only with JDK 1.5 or higher.

Oracle plugin: Fixed the rendering of details/source tabs for indexes
sequences and triggers.

Added support for Informix way of referring to database objects within 
catalog and schema as catalog:"schema".objectname.

DBCopy plugin:
  - Removed reflective code used for backward compatibility which was causing 
  IllegalAccessExceptions when the keyword test was applied to column names.

  - Fixed bug in copying FK constraints which left cursors open by not properly 
  closing ResultSets when they were no longer needed.

  - Fixed bug in copying FK constraints where the primary key table 
  name wasn't fully qualified the schema of the destination database.  This was 
  most noticeable when copying tables with FKs into a schema which was not the 
  default schema for that session.

  - Fixed bug where cancelling the copy operation during table data transfer 
    did not also cancel the transfer of table constraints.

  - Removed needless dependency on Java 5 from the DBCopy plugin. 

1601610 - Bug while editing integer/long columns
  
1598162: Fixed the issue when using Java 6 you had to click the Connect button 
twice when the app is first started.

1597463: Maximized and multimonitor window size not saved
